fix: input with on mobile (80/20 to input/btn)

--- a/src/index.css
+++ b/src/index.css
@@ -70,20 +70,22 @@
 }
 
 .input-container {
-    display:flex;
+    /* display:flex; */
 }
 
 .input-container input {
-    flex:1;
-    padding: 20px;
+    width:80%;
+    padding: 16px;
     font-size: 24px;
     border: 1px solid #ccc;
     border-radius: 5px 0 0 5px ;
 }
 
 .input-container .button {
-    margin:0;
-    font-size:40px;
+    width:20%;
+    padding: 16px;
+    margin: 0;
+    font-size:24px;
     border-radius: 0 5px 5px 0;
     background-color: green;
 }
